<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="4"
    android:background="@drawable/earth"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Formula"
        android:textColor="@color/white"
        android:textSize="80dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textColor="@color/white"
        android:textSize="60dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <Button
            android:id="@+id/button_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/C"
            android:textSize="@dimen/button_text_size"/>


        <Button
            android:id="@+id/button_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/backspace"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/percent"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/divide"
            android:textSize="@dimen/button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_7"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_8"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_9"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/x"
            android:textSize="@dimen/button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_4"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_5"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_6"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/minus"
            android:textSize="@dimen/button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_1"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_2"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_3"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/plus"
            android:textSize="@dimen/button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_0"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/_00"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/comma"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/equals"
            android:textSize="@dimen/button_text_size" />
    </TableRow>


</TableLayout>

